--- a/assets/apps/riemann/harmonic_app.html
+++ b/assets/apps/riemann/harmonic_app.html
@@ -90,7 +90,7 @@
 
     <div>
       <div class="input-row">
-        <label>Image Quality (DPI):
+        <label>Image Quality (DPI), ok:
           <input type="range" id="dpiSlider" min="800" max="1800" step="50" value="1200"
                  oninput="document.getElementById('dpiLabel').textContent = this.value">
           <span id="dpiLabel">1200</span>
