--- a/assets/apps/riemann/harmonic_app.html
+++ b/assets/apps/riemann/harmonic_app.html
@@ -104,6 +104,7 @@
       <label>Sigma A: <input type="number" step="0.01" id="sigma_a" value="0.4" min="0.1" max="1"></label>
       <label>Sigma B: <input type="number" step="0.01" id="sigma_b" value="0.6" min="0.1" max="1"></label>
       <button onclick="runPython()">Generate Plot</button>
+      <button id="toggleNaturalsBtn" onclick="toggleNaturals()">Naturals: Off</button>
       <button onclick="resetGraphic()">Reset to Default Graphic</button>
     </div>
 
@@ -139,6 +140,13 @@
     let pyodideReady = false;
     let lastCSV = "";
     let lastImageURL = "";
+    let showNaturals = true;
+
+    function toggleNaturals() {
+      showNaturals = !showNaturals;
+      const btn = document.getElementById("toggleNaturalsBtn");
+      btn.textContent = "Naturals: " + (showNaturals ? "Off" : "On");
+    }
 
     window.onload = () => {
       const canvas = document.getElementById("plot");
