--- a/assets/apps/riemann/harmonic_app.html
+++ b/assets/apps/riemann/harmonic_app.html
@@ -196,6 +196,7 @@
       await pyodide.globals.set("js_zeros", zeros);
       const preparedPrimes = await fetchPrimesFromFile(numPrimes);
       await pyodide.globals.set("preparedPrimes", preparedPrimes);
+      await pyodide.globals.set("js_showNaturals", showNaturals);
       
       exportSection.style.display = "none";
 
@@ -207,8 +208,7 @@ from sympy import primerange
 sigma_a = float(${sigmaA})
 sigma_b = float(${sigmaB})
 base_sigma = 0.5
-show_naturals = False
-await pyodide.globals.set("js_showNaturals", showNaturals);
+show_naturals = showNaturals
 
 def detect_destructive_minima(t_values, amplitudes_dict, sigma_base=0.5, eps=0.05, threshold=-1.5):
     results = []
