--- a/assets/apps/riemann/harmonic_app.html
+++ b/assets/apps/riemann/harmonic_app.html
@@ -145,7 +145,7 @@
     function toggleNaturals() {
       showNaturals = !showNaturals;
       const btn = document.getElementById("toggleNaturalsBtn");
-      btn.textContent = "Naturals: " + (showNaturals ? "Off" : "On");
+      btn.textContent = "Naturals: " + (showNaturals ? "On" : "Off");
     }
 
     window.onload = () => {
